Change how URLs are constructed
URLs for files in the samples will now be created by first constructing
a file and getting its URL, rather than calling the URL constructor on
a file path.

Also, removed a redundant utility method in MadePdfFromImage.