@@ -68,7 +68,7 @@ public final class ConvertPdfDocument {
         final URL inputUrl = ConvertPdfDocument.class.getResource(INPUT_UNCONVERTED_PDF_PATH);
         URL outputUrl = null;
         if (args.length > 0) {
-            outputUrl = new URL(args[0]);
+            outputUrl = new File(args[0]).toURI().toURL();
         } else {
             outputUrl = new File(OUTPUT_CONVERTED_PDF_PATH).toURI().toURL();
         }
